--- a/Assembly-CSharp.Player.csproj
+++ b/Assembly-CSharp.Player.csproj
@@ -60,10 +60,12 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.14f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Player\JoystickControllerRotate.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerInstaller.cs" />
+    <Compile Include="Assets\Scripts\Player\JoystickControllerMove.cs" />
+    <Compile Include="Assets\Scripts\Player\JoystickController.cs" />
     <Compile Include="Assets\Scripts\Player\Interactor.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerView.cs" />
-    <Compile Include="Assets\Scripts\Common\CursorHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
